--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "nuxt": "^2.4.0",
     "vuetify": "^1.5.5",
     "vuetify-loader": "^1.2.1",
-    "vuexfire": "^3.0.0-alpha.18"
+    "vuexfire": "^3.2.0-alpha.0"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^0.0.1",
@@ -38,6 +38,7 @@
     "eslint-plugin-promise": ">=4.0.1",
     "eslint-plugin-standard": ">=4.0.0",
     "eslint-plugin-vue": "^5.2.2",
+    "mini-css-extract-plugin": "^0.8.0",
     "nodemon": "^1.18.9",
     "prettier": "^1.16.4",
     "stylus": "^0.54.5",
